--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="RTISS"/>
+  <meta name="keywords" content="Natty"/>
   <meta name="description" content="Research Team Information Sharing System"/>
-  <title>RTISS</title>
+  <title>Natty</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/site.css">
 </head>
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">RTISS</a>
+        <a class="navbar-brand" href="#">Natty</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -27,20 +27,20 @@
           <li><a href="home.html">Home</a></li>
           <li><a href="demo.html">Demo</a></li>
           <li><a href="download.html">Download</a></li>
-          <li><a href="https://github.com/wentaoliu/rtiss/wiki">Documentation</a></li>
-          <li><a href="https://github.com/wentaoliu/rtiss">Development</a></li>
+          <li><a href="https://github.com/wentaoliu/natty/wiki">Documentation</a></li>
+          <li><a href="https://github.com/wentaoliu/natty">Development</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
   <div class="container">
     <header>
-      <h1>RTISS</h1>
-      <h2>Research Team Information Sharing System</h2>
+      <h1>Natty</h1>
+      <h2>A CMS designed for research teams</h2>
     </header>
     <div class="row">
       <div class="col-md-6">
-        <img class="demo" src="img/rtiss_signin.png"/>
+        <img class="demo" src="img/screenshot_signin.png"/>
       </div>
       <div class="col-md-6">
         <p>Features</p>
